# SmoothTask

./: .gitignore  AGENTS.md  CODE_AUDIT_REPORT.md  COMMIT_MESSAGE.txt  Cargo.toml  DEVELOPMENT_SUMMARY.md  DOCKER_README.md  Dockerfile  Dockerfile.dev  Dockerfile.minimal  IMPLEMENTATION_SUMMARY_ST-1031.md  IMPLEMENTATION_SUMMARY_ST-1034.md  IMPLEMENTATION_SUMMARY_ST-1048.md  IMPLEMENTATION_SUMMARY_ST-1049.md  IMPLEMENTATION_SUMMARY_ST-884.md  ML_PERFORMANCE_MONITORING_SUMMARY.md  MODEL_README.md  PERFORMANCE_OPTIMIZATION_SUMMARY.md  PLAN.md  PLAN.md.backup  PROJECT_STATUS_SUMMARY.md  README.md  REPORT_20260118.md  RUST_UPDATE_REPORT.md  SESSION_COMPLETION_REPORT.md  SESSION_SUMMARY.md  ST-690_COMPLETION_SUMMARY.md  TECHNICAL_DEBT_AUDIT.md  THREAT_DETECTION_STATUS_REPORT.md  WORK_SESSION_SUMMARY.md  archive_tasks.py  collect_and_train.py  complete_data_collection.py  create_training_dataset.py  data_collection_report.md  entrypoint.sh  generate_training_data.py  integrate_model.py  merge_snapshots.py  merge_sqlite_databases.py  (+16 more)
benches/: performance_bench.rs
catboost_info/: time_left.tsv
configs/: smoothtask.example.example.backup.yml  smoothtask.example.yml
docs/: API.md  API_CLASSIFY.md  API_CONFIG_SCHEMA.md  API_INTROSPECTION_RESEARCH.md  API_METRICS.md  API_POLICY.md  API_SECURITY.md  ARCHITECTURE.md  BEHAVIORAL_PATTERNS_RESEARCH.md  CACHING_SYSTEM.md  CATBOOST_V1_GUIDE.md  CONFIGURATION_GUIDE.md  CONTAINER_SUPPORT.md  EBPF_API_DOCUMENTATION.md  EBPF_SETUP.md  (+22 more)
smoothtask-core/: Cargo.toml
smoothtask-core/benches/: classification_bench.rs  ebpf_benchmarks.rs  logging_bench.rs  memory_optimization_bench.rs  ml_classifier_bench.rs  performance_optimizer_bench.rs  performance_profiling_bench.rs  process_metrics_bench.rs  scheduling_latency_bench.rs  simple_benchmarks.rs  test_bench.rs
smoothtask-core/examples/: README.md  async_logging_integration_example.rs  cgroups_example.rs  ebpf_advanced_example.rs  ebpf_example.rs
smoothtask-core/src/: actuator.rs  config.rs  lib.rs  performance_optimizer.rs
smoothtask-core/src/api/: custom_metrics_handlers.rs  mod.rs  server.rs  validation.rs
smoothtask-core/src/classify/: grouper.rs  ml_classifier.rs  mod.rs  pattern_watcher.rs  rules.rs
smoothtask-core/src/config/: auto_reload.rs  config.rs  config_struct.rs  mod.rs  watcher.rs
smoothtask-core/src/ebpf_programs/: application_performance.c  cpu_metrics.c  cpu_metrics_memory_optimized.c  cpu_metrics_optimized.c  cpu_temperature.c  filesystem_monitor.c  filesystem_monitor_high_perf.c  filesystem_monitor_optimized.c  gpu_monitor.c  gpu_monitor_comprehensive.c  gpu_monitor_high_perf.c  gpu_monitor_memory_optimized.c  gpu_monitor_optimized.c  network_connections.c  network_monitor.c  process_disk.c  process_energy.c  process_gpu.c  process_memory.c  process_monitor.c  process_network.c  syscall_monitor.c  syscall_monitor_advanced.c  syscall_monitor_optimized.c  test_cpu_metrics.c  test_memory_metrics.c
smoothtask-core/src/health/: container_health.rs  diagnostics.rs  mod.rs  monitoring.rs  notifications.rs  security_monitoring.rs  tests.rs  threat_detection.rs  threat_intelligence.rs
smoothtask-core/src/logging/: app_rotation.rs  async_logging.rs  integration.rs  log_storage.rs  mod.rs  rotation.rs  snapshots.rs
smoothtask-core/src/metrics/: amdgpu_wrapper.rs  app_performance.rs  audio.rs  audio_pipewire.rs  batch_processor.rs  cache.rs  cache_monitor.rs  container.rs  custom.rs  ebpf.rs  energy_monitoring.rs  extended_hardware_sensors.rs  filesystem_monitor.rs  gpu.rs  hardware_acceleration.rs  input.rs  io_monitor.rs  ml_performance.rs  mod.rs  network.rs  nvml_wrapper.rs  performance_profiler.rs  process.rs  process_energy.rs  process_gpu.rs  process_network.rs  prometheus_exporter.rs  scheduling_latency.rs  storage.rs  system.rs  thunderbolt_monitor.rs  vm.rs  windows.rs  windows_wayland.rs  windows_x11.rs
smoothtask-core/src/model/: features.rs  mod.rs  onnx_ranker.rs  ranker.rs  updater.rs  version.rs
smoothtask-core/src/notifications/: mod.rs
smoothtask-core/src/policy/: classes.rs  dynamic.rs  engine.rs  mod.rs
smoothtask-core/src/utils/: cgroups.rs  container.rs  mod.rs  process.rs  virtualization.rs
smoothtask-core/tests/: actuator_integration_test.rs  api_integration_test.rs  async_logging_integration_test.rs  auto_update_integration_test.rs  cache_monitor_integration_test.rs  caching_test.rs  collect_snapshot_test.rs  container_integration_test.rs  container_performance_integration_test.rs  critical_scenarios_integration_test.rs  ebpf_integration_test.rs  ebpf_mock_test.rs  ebpf_real_integration_test.rs  ebpf_scenario_test.rs  edge_case_integration_test.rs  extended_hardware_sensors_integration_test.rs  gpu_integration_test.rs  health_recovery_test.rs  io_monitor_integration_test.rs  logging_analysis_integration_test.rs  logging_integration_test.rs  ml_classifier_integration_test.rs  ml_threat_detection_test.rs  monitoring_integration_test.rs  network_qos_integration_test.rs  network_security_comprehensive_test.rs  network_security_integration_test.rs  performance_profiling_test.rs  performance_test.rs  process_energy_integration_test.rs  process_extended_metrics_test.rs  process_parallel_test.rs  run_daemon_test.rs  sata_real_system_test.rs  security_monitoring_integration_test.rs  storage_integration_test.rs  test_async_logging_simple.rs  test_network_security_basic.rs  threat_detection_integration_test.rs  threat_intelligence_enhanced_test.rs  (+4 more)
smoothtask-trainer/: README.md  pyproject.toml
smoothtask-trainer/catboost_info/: time_left.tsv
smoothtask-trainer/smoothtask_trainer/: __init__.py  collect_data.py  dataset.py  export_model.py  features.py  train_pipeline.py  train_ranker.py  tune_policy.py
smoothtask-trainer/tests/: __init__.py  test_collect_data.py  test_config_validation.py  test_dataset.py  test_export_model.py  test_features.py  test_integration.py  test_train_pipeline.py  test_train_ranker.py  test_tune_policy.py
smoothtaskd/: Cargo.toml
smoothtaskd/src/: main.rs  systemd.rs
smoothtaskd/tests/: systemd_integration_test.rs
(+34 files in other folders)
