[package]
name = "smoothtask-core"
version = "0.0.1"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "sync"] }
tracing = "0.1"
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0"

# системные штуки
procfs = "0.16"
nix = { version = "0.28", features = ["process", "signal"] }
libc = "0.2"
evdev = "0.12"

# cgroups
cgroups-rs = "0.3"

# X11 / Wayland / audio будем добавлять по мере реализации:
x11rb = { version = "0.13", features = ["randr", "xfixes"] }
wayland-client = "0.31"
wayland-protocols = { version = "0.32", features = ["client", "unstable"] }
wayland-protocols-wlr = { version = "0.3", features = ["client"] }
# pipewire = "0.6"
# libpulse-binding = "2.28.1"

# SQLite / хранение снапшотов
rusqlite = { version = "0.31", features = ["bundled", "chrono"] }
chrono = { version = "0.4", features = ["serde"] }

anyhow = "1"
rayon = "1.8"
async-trait = "0.1"

# HTTP API
axum = { version = "0.7", features = ["json"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors"] }

# Мониторинг файловой системы
notify = "6.1"

# Desktop уведомления
libnotify = { version = "0.1", optional = true }

# Сжатие логов
flate2 = { version = "1.0", features = ["zlib"] }

# ML инференс
# ONNX Runtime для загрузки и выполнения обученных CatBoost моделей
ort = { version = "2.0.0-rc.10", features = ["default"] }

[features]
libnotify = ["dep:libnotify"]

[dev-dependencies]
tempfile = "3"
criterion = "0.5"
reqwest = { version = "0.12", features = ["json"] }

