[package]
name = "smoothtask-core"
version = "0.0.1"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "sync", "fs", "process"] }
tracing = "0.1"
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0"

# системные штуки
procfs = "0.16"
nix = { version = "0.28", features = ["process", "signal"] }
libc = "0.2"
evdev = "0.12"

# cgroups
cgroups-rs = "0.3"

# X11 / Wayland / audio будем добавлять по мере реализации:
x11rb = { version = "0.13", features = ["randr", "xfixes"] }
wayland-client = "0.31"
wayland-protocols = { version = "0.32", features = ["client", "unstable"] }
wayland-protocols-wlr = { version = "0.3", features = ["client"] }
# pipewire = "0.6"
# libpulse-binding = "2.28.1"

# SQLite / хранение снапшотов
rusqlite = { version = "0.31", features = ["bundled", "chrono"] }
chrono = { version = "0.4", features = ["serde"] }

anyhow = "1"
rayon = "1.8"
async-trait = "0.1"
thiserror = "1"
uuid = { version = "1.8", features = ["v4", "serde"] }
once_cell = "1.19"

# HTTP API
axum = { version = "0.7", features = ["json"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors"] }

# Мониторинг файловой системы
notify = "6.1"

# Сжатие логов
flate2 = { version = "1.0", features = ["zlib"] }

# Регулярные выражения для пользовательских метрик
regex = "1.10"

# Lazy static для глобальных кэшей
lazy_static = { version = "1.4", features = ["spin_no_std"] }

# Для определения количества CPU ядер
num_cpus = "1.16"

# Для работы с системными конфигурациями (clock ticks и т.д.)
sysconf = "0.3"

# Для генерации случайных чисел в тестах и симуляциях
rand = "0.8"

# LRU кэш для оптимизации производительности
lru = "0.12"

# Для парсинга CSV файлов угроз
csv = "1.3"

# Glob для работы с файловой системой
glob = "0.3"

# Системный мониторинг для управления памятью
sysinfo = "0.30"

# ML-классификация (опционально)
catboost = { version = "0.1", optional = true }
ort = { version = "2.0.0-rc.10", features = ["default"], optional = true }
sha2 = "0.10"  # Для вычисления хэшей моделей

# HTTP клиент для автоматического обновления моделей
reqwest = { version = "0.12", features = ["blocking", "json"] }

# Email поддержка для уведомлений
lettre = { version = "0.11", features = ["tokio1-native-tls", "builder", "smtp-transport"], optional = true }

# SMS поддержка через HTTP API
# Используем reqwest для HTTP SMS шлюзов

# eBPF поддержка
libbpf-rs = { version = "0.26.0-beta.1", optional = true }

# Desktop уведомления
# libnotify = { version = "0.7", optional = true }

# D-Bus поддержка для уведомлений и интеграции
zbus = { version = "4.1", optional = true }

# systemd интеграция для уведомлений
libsystemd = "0.3"

# NVML поддержка для NVIDIA GPU
nvml-wrapper = { version = "0.10", optional = true }

# AMDGPU поддержка для AMD GPU (закомментировано, так как нет стабильной версии)
# amdgpu-sys = { version = "0.1", optional = true }

[features]
default = []
# libnotify = ["dep:libnotify"]
dbus = ["dep:zbus"]
catboost = ["dep:catboost"]
onnx = ["dep:ort"]
ebpf = ["dep:libbpf-rs"]
email = ["dep:lettre"]
sms = []
telegram = []
discord = []

[dev-dependencies]
tempfile = "3"
criterion = "0.5"
reqwest = { version = "0.12", features = ["json"] }

# [[bench]]
# name = "performance_bench"
# harness = false

[[example]]
name = "async_logging_integration_example"
path = "examples/async_logging_integration_example.rs"
required-features = []

