[package]
name = "smoothtaskd"
version = "0.0.1"
edition = "2021"

[dependencies]
smoothtask-core = { path = "../smoothtask-core" }

tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4", features = ["derive"] }
anyhow = "1"

